# _SYNERGY_GIT

./: .gitignore
HangerApplication/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
HangerApplication/app/src/main/: AndroidManifest.xml
HangerApplication/app/src/main/cpp/: native-lib.cpp
HangerApplication/app/src/main/res/drawable/: ic_keyboard_arrow_right_black_24dp.xml  ic_menu_share_pp.xml  ic_next_gray_24dp.xml  ic_photo_camera.xml  ic_reply_black_24dp.xml  ic_search_black_24dp.xml  item_check.xml  share_btn_click.xml
HangerApplication/app/src/main/res/layout/: activity_add_clothes.xml  activity_add_coordy.xml  activity_calendar.xml  activity_calender.xml  activity_camera.xml  activity_camera2.xml  activity_codi_info.xml  activity_edit_closet.xml  activity_edit_info.xml  activity_forgot.xml  activity_gallery.xml  activity_grabcut.xml  activity_grabcut2.xml  activity_img_processing.xml  activity_login.xml  activity_main.xml  activity_main_page.xml  activity_signup.xml  activity_signup_approved.xml  activity_weather.xml  fragment_acc.xml  fragment_dash.xml  fragment_dress.xml  fragment_grabcut.xml  fragment_home.xml  fragment_shared_codi_info.xml  fragment_temp.xml  getlikes.xml  item_acc_girdview.xml  item_calendar_grid.xml  item_codi_gridview.xml  item_coordy_gridview.xml  item_dress_listview.xml  item_getlikes.xml  item_home_girdview.xml  item_home_gridview_check.xml  item_share_codi_gridview.xml  item_temp_gridview.xml  item_viewpager.xml  my_menu.xml  (+2 more)
HangerApplication/app/src/main/res/menu/: menu_image_processing.xml  menu_main.xml
(+65 files in other folders)
